# tabuada

./: .gitignore  AUTHORS  CMakeLists.txt  Makefile  README  README.org  book.C  book.cpp  book.html  book.org  fitextern  gp  gp.c  gp.h  index.html  machine.c  machine.h  setup.config  tabuada.c
readtheorg/css/: readtheorg.css
src/: CMakeLists.txt  Makefile  fitexternal.c  fitexternal.h  fitmult.c  gp.c  gp.h  machine.h
src/fitlibs/: fitmult.h
